--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,14 @@
     <display-name>Tatami</display-name>
 
     <!-- All the Servlets and Filters are configured by this ServletContextListener : -->
+    <filter>
+		<filter-name>XSS</filter-name>
+		<filter-class>fr.ippon.tatami.web.monitoring.XSSFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>XSS</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
     <listener>
         <listener-class>fr.ippon.tatami.web.init.WebConfigurer</listener-class>
     </listener>
