--- a/pom.xml
+++ b/pom.xml
@@ -145,22 +145,6 @@
             <version>${spring.security.version}</version>
         </dependency>
         <dependency>
-		   <groupId>org.springframework.social</groupId>
-		   <artifactId>spring-social-core</artifactId>
-		   <version>${spring-social.version}</version>
-		</dependency>
-		<dependency>
-		   <groupId>org.springframework.social</groupId>
-		   <artifactId>spring-social-web</artifactId>
-		   <version>${spring-social.version}</version>
-		</dependency>
-		<dependency>
-		   <groupId>org.springframework.social</groupId>
-		   <artifactId>spring-social-github</artifactId>
-		   <version>${spring-social.version}</version>
-		</dependency>
-		
-        <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
@@ -183,6 +167,11 @@
             <version>1.9.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+		  	<groupId>org.jsoup</groupId>
+		  	<artifactId>jsoup</artifactId>
+		  	<version>1.6.2</version>
+		</dependency>
     </dependencies>
     <build>
         <finalName>tatami</finalName>
@@ -246,5 +235,4 @@
             </plugin>
         </plugins>
     </build>
-    
 </project>
